--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@ethersproject/contracts": "^5.0.9",
+    "@ethersproject/providers": "^5.0.18",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@walletconnect/web3-provider": "^1.3.3",
+    "apollo-boost": "^0.4.9",
+    "apollo-client": "^2.6.10",
+    "apollo-utilities": "^1.3.4",
     "axios": "^0.21.1",
+    "graphql": "^15.4.0",
+    "ipfs-http-client": "^48.1.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
@@ -20,7 +29,9 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "web3": "^1.3.1",
+    "web3modal": "^1.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
